# minuteman-bot

./: .gitignore  Cargo.toml  Dockerfile
examples/: minuteman.rs
src/: config.rs  lib.rs  main.rs  prelude.rs  utils.rs
src/assets/: global.css
src/components/: header.rs
src/renderer/: chat_index.rs  chat_listing.rs  chats.rs  get_file.rs  mod.rs
src/workers/: mod.rs  server_handler.rs  telegram_handler.rs
