[package]
name = "minuteman"
version = "0.1.0"
edition = "2021"

description = "Removes join and leave messages in Telegram groups."
license = "MIT"

[dependencies]
chrono = "0.4.19"
futures = "0.3.21"
image = "0.24.2"
pw-telegram-bot-fork = "0.9.0"
reqwest = { version = "0.11.10", features = ["stream"] }
rocksdb = { version = "0.18.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = [ "macros", "rt", "rt-multi-thread" ] }
tracing-subscriber = "0.3.11"
warp = "0.3.2"
